# telekinesis

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: npm-publish.yml  python-package.yml  python-publish.yml
client/: setup.py
client/camarere/: __init__.py  client.py  server.py
examples/telekinesis_cloud_website/: emails.py  hub.py  landing.py  run.py  server.py  sign_in.py
examples/telekinesis_cloud_website/services/: emails.py  landing.html  landing.py  sign_in.py
js/: .gitignore  README.md  bundle.js  env.spec.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  webpack.config.js
js/src/: browser.ts  client.spec.ts  client.ts  cryptography.ts  fakeWebSocket.ts  helpers.ts  index.ts  telekinesis.http.spec.ts  telekinesis.spec.ts  telekinesis.ts  utils.ts  webpack.ts  x.spec.ts
landing/: PUBLIC.pub  emails.py  landing.py  server.py  sign_in.py
python/: README.md  pyproject.toml  setup.py
python/camarere/: __init__.py  client.py  common.py  encryption.py  hub.py  server.py
python/telekinesis/: __init__.py  broker.py  client.py  common.py  cryptography.py  fake_websockets.py  helpers.py  hub.py  portal.py  remote_objects.py  telekinesis.py
python/test/: test_00_basics.py  test_00_walkthrough.py  test_01_auth.py  test_01_encode_decode.py  test_01_objects.py  test_01_subscribe.py  test_02_auth.py  test_02_garbage_collection.py  test_03_input_request.py  test_03_request_forwarding.py  test_03_subscribe.py  test_04_request_forwarding.py  test_04_state_diffing.py  test_05_serialization.py  test_06_state_diffing.py
server/: landing.html  server.py
