[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telekinesis"
version = "0.1.91"
authors = [
    {name = "Telekinesis, Inc.", email = "support@telekinesis.cloud"},
]
description = "Open Source, End-to-End Encrypted, Anywhere-to-Anywhere, Remote Procedure Calls."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets>=11.0",
    "cryptography>=35.0",
    "bson>=0.5.10",
    "ujson>=4.0.0",
    "packaging>=20.0",
]

[project.urls]
Homepage = "https://github.com/telekinesis-cloud/telekinesis"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
